--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "private": true,
   "scripts": {
     "dev": "next",
-    "build": "next build",
-    "start": "next start",
+    "build": "next build && next export",
+    "start": "serve out",
     "typecheck": "tsc"
   },
   "dependencies": {
@@ -17,6 +17,7 @@
     "react-dom": "^18.2.0",
     "remark": "^14.0.2",
     "remark-html": "^15.0.1",
+    "serve": "^14.2.0",
     "typescript": "^4.7.4"
   },
   "devDependencies": {
