--- a/package.json
+++ b/package.json
@@ -7,12 +7,17 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@headlessui/react": "^1.7.8",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.13.6",
     "@vercel/analytics": "^0.1.8",
     "classnames": "^2.3.1",
     "date-fns": "^2.28.0",
     "gray-matter": "^4.0.3",
     "next": "latest",
+    "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "remark": "^14.0.2",
