--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "date-fns": "^2.28.0",
     "gray-matter": "^4.0.3",
     "next": "latest",
+    "next-share": "^0.27.0",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
